detection_of_pcb_prj/detection_of_pcb/Library/Include/C154.pas


unit C154;

interface

//-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
// System Section 6.3
function  c154_initial( var CardID_InBit :Word;   Manual_ID :Smallint):Smallint;stdcall;
function  c154_close():Smallint;stdcall;
function  c154_get_version(  CardId :Smallint;   var firmware_ver;  var driver_ver :Longint;  var dll_ver :Longint):Smallint;stdcall;
function  c154_set_security_key(  CardId :Smallint;   old_secu_code:Smallint;   new_secu_code:Smallint):Smallint;stdcall;
function  c154_check_security_key(  CardId :Smallint;   secu_code :Smallint):Smallint;stdcall;
function  c154_reset_security_key(  CardId :Smallint):Smallint;stdcall;
function  c154_config_from_file():Smallint;stdcall;

//Pulse Input/Output Configuration Section 6.4
function  c154_set_pls_outmode(  AxisNo:Smallint;   pls_outmode:Smallint):Smallint;stdcall;
function  c154_set_pls_iptmode(  AxisNo:Smallint;   pls_iptmode:Smallint;   pls_logic:Smallint):Smallint;stdcall;
function  c154_set_feedback_src(  AxisNo:Smallint;   Src:Smallint):Smallint;stdcall;

//Velocity mode motion Section 6.5
function  c154_tv_move(  AxisNo:Smallint;  StrVel:Double;  MaxVel:Double;  Tacc:Double):Smallint;stdcall;
function  c154_sv_move(  AxisNo:Smallint;  StrVel:Double;  MaxVel:Double;  Tacc:Double;  SVacc:Double):Smallint;stdcall;
function  c154_sd_stop(  AxisNo:Smallint;  Tdec:Double):Smallint;stdcall;
function  c154_emg_stop(  AxisNo:Smallint):Smallint;stdcall;
function  c154_get_current_speed(  AxisNo:Smallint;  var speed:Double):Smallint;stdcall;
function  c154_speed_override(  CAxisNo:Smallint;  NewVelPercent:Double;  Time:Double):Smallint;stdcall;
function  c154_set_max_override_speed(  AxisNo:Smallint;  OvrdSpeed:Double;   Enable:Smallint):Smallint;stdcall;

//Single Axis Position Mode Section 6.6
function  c154_start_tr_move(  AxisNo:Smallint;  Dist:Double;  StrVel:Double;  MaxVel:Double;  Tacc:Double;  Tdec:Double):Smallint;stdcall;
function  c154_start_ta_move(  AxisNo:Smallint;  Pos:Double;  StrVel:Double;  MaxVel:Double;  Tacc:Double;  Tdec:Double):Smallint;stdcall;
function  c154_start_sr_move(  AxisNo:Smallint;  Dist:Double;  StrVel:Double;  MaxVel:Double;  Tacc:Double;  Tdec:Double;  SVacc:Double;  SVdec:Double):Smallint;stdcall;
function  c154_start_sa_move(  AxisNo:Smallint;  Pos:Double;  StrVel:Double;  MaxVel:Double;  Tacc:Double;  Tdec:Double;  SVacc:Double;  SVdec:Double):Smallint;stdcall;
function  c154_set_move_ratio(  AxisNo:Smallint;  move_ratio:Double):Smallint;stdcall;


//Linear Interpolated Motion Section 6.7
  // Two Axes Linear Interpolation function
function  c154_start_tr_move_xy(  CardId:Smallint;  DistX:Double;  DistY:Double;  StrVel:Double;  MaxVel:Double;  Tacc:Double;  Tdec:Double):Smallint;stdcall;
function  c154_start_tr_move_zu(  CardId:Smallint;  DistX:Double;  DistY:Double;  StrVel:Double;  MaxVel:Double;  Tacc:Double;  Tdec:Double):Smallint;stdcall;

function  c154_start_ta_move_xy(  CardId:Smallint;  PosX:Double;  PosY:Double;  StrVel:Double;  MaxVel:Double;  Tacc:Double;  Tdec:Double):Smallint;stdcall;
function  c154_start_ta_move_zu(  CardId:Smallint;  PosX:Double;  PosY:Double;  StrVel:Double;  MaxVel:Double;  Tacc:Double;  Tdec:Double):Smallint;stdcall;

function  c154_start_sr_move_xy(  CardId:Smallint;  DistX:Double;  DistY:Double;  StrVel:Double;  MaxVel:Double;  Tacc:Double;  Tdec:Double;  SVacc:Double;  SVdec:Double):Smallint;stdcall;
function  c154_start_sr_move_zu(  CardId:Smallint;  DistX:Double;  DistY:Double;  StrVel:Double;  MaxVel:Double;  Tacc:Double;  Tdec:Double;  SVacc:Double;  SVdec:Double):Smallint;stdcall;

function  c154_start_sa_move_xy(  CardId:Smallint;  PosX:Double;  PosY:Double;  StrVel:Double;  MaxVel:Double;  Tacc:Double;  Tdec:Double;  SVacc:Double;  SVdec:Double):Smallint;stdcall;
function  c154_start_sa_move_zu(  CardId:Smallint;  PosX:Double;  PosY:Double;  StrVel:Double;  MaxVel:Double;  Tacc:Double;  Tdec:Double;  SVacc:Double;  SVdec:Double):Smallint;stdcall;

//Any 2 of former or later 4 axes linear interpolation function
function  c154_start_tr_line2(  var AxisArray:Smallint;  var DistArray:Double;  StrVel:Double;  MaxVel:Double;  Tacc:Double;  Tdec:Double):Smallint;stdcall;
function  c154_start_ta_line2(  var AxisArray:Smallint;  var PosArray:Double;  StrVel:Double;  MaxVel:Double;  Tacc:Double;  Tdec:Double):Smallint;stdcall;
function  c154_start_sr_line2(  var AxisArray:Smallint;  var DistArray:Double;  StrVel:Double;  MaxVel:Double;  Tacc:Double;  Tdec:Double;  SVacc:Double;  SVdec:Double):Smallint;stdcall;
function  c154_start_sa_line2(  var AxisArray:Smallint;  var PosArray:Double;  StrVel:Double;  MaxVel:Double;  Tacc:Double;  Tdec:Double;  SVacc:Double;  SVdec:Double):Smallint;stdcall;

//Any 3 of former or later 4 axes linear interpolation function
function  c154_start_tr_line3(  var AxisArray:Smallint;  var DistArray:Double;  StrVel:Double;  MaxVel:Double;  Tacc:Double;  Tdec:Double):Smallint;stdcall;
function  c154_start_ta_line3(  var AxisArray:Smallint;  var PosArray:Double;  StrVel:Double;  MaxVel:Double;  Tacc:Double;  Tdec:Double):Smallint;stdcall;
function  c154_start_sr_line3(  var AxisArray:Smallint;  var DistArray:Double;  StrVel:Double;  MaxVelv:Double;  Tacc:Double;  Tdec:Double;  SVacc:Double;  SVdec:Double):Smallint;stdcall;
function  c154_start_sa_line3(  var AxisArray:Smallint;  var PosArray;  StrVel:Double;  MaxVel:Double;  Tacc:Double;  Tdec:Double;  SVacc:Double;  SVdec:Double):Smallint;stdcall;

//Former or later 4 Axes linear interpolation function
function  c154_start_tr_line4(  var AxisArray:Smallint;  var DistArray;  StrVel:Double;  MaxVel:Double;  Tacc:Double;  Tdec:Double):Smallint;stdcall;
function  c154_start_ta_line4(  var AxisArray:Smallint;  var PosArray;  StrVel:Double;  MaxVel:Double;  Tacc:Double;  Tdec:Double):Smallint;stdcall;
function  c154_start_sr_line4(  var AxisArray:Smallint;  var DistArray;  StrVel:Double;  MaxVel:Double;  Tacc:Double;  Tdec:Double;  SVacc:Double;  SVdec:Double):Smallint;stdcall;
function  c154_start_sa_line4(  var AxisArray:Smallint;  var PosArray;  StrVel:Double;  MaxVel:Double;  Tacc:Double;  Tdec:Double;  SVacc:Double;  SVdec:Double):Smallint;stdcall;

//Circular Interpolation Motion Section 6.8
  // Two Axes Arc Interpolation function 
function  c154_start_tr_arc_xy(  CardId:Smallint;  OffsetCx:Double;  OffsetCy:Double;  OffsetEx:Double;  OffsetEy:Double;   CW_CCW:Smallint;  StrVel:Double; MaxVel:Double; Tacc:Double; Tdec:Double):Smallint;stdcall;
function  c154_start_ta_arc_xy(  CardId:Smallint;  Cx:Double;  Cy:Double;  Ex:Double;  Ey:Double;   CW_CCW:Smallint;  StrVel:Double; MaxVel:Double; Tacc:Double; Tdec:Double):Smallint;stdcall;
function  c154_start_sr_arc_xy(  CardId:Smallint;  OffsetCx:Double;  OffsetCy:Double;  OffsetEx:Double;  OffsetEy:Double;   CW_CCW:Smallint;  StrVel:Double; MaxVel:Double; Tacc:Double; Tdec:Double; SVacc:Double; SVdec:Double):Smallint;stdcall;
function  c154_start_sa_arc_xy(  CardId:Smallint;  Cx:Double;  Cy:Double;  Ex:Double;  Ey:Double;   CW_CCW:Smallint;  StrVel:Double; MaxVel:Double; Tacc:Double; Tdec:Double; SVacc:Double; SVdec:Double):Smallint;stdcall;

function  c154_start_tr_arc_zu(  CardId:Smallint;  OffsetCx:Double;  OffsetCy:Double;  OffsetEx:Double;  OffsetEy:Double;   CW_CCW:Smallint;  StrVel:Double; MaxVel:Double; Tacc:Double; Tdec:Double):Smallint;stdcall;
function  c154_start_ta_arc_zu(  CardId:Smallint;  Cx:Double;  Cy:Double;  Ex:Double;  Ey:Double;   CW_CCW:Smallint;  StrVel:Double; MaxVel:Double; Tacc:Double; Tdec:Double):Smallint;stdcall;
function  c154_start_sr_arc_zu(  CardId:Smallint;  OffsetCx:Double;  OffsetCy:Double;  OffsetEx:Double;  OffsetEy:Double;   CW_CCW:Smallint;  StrVel:Double; MaxVel:Double; Tacc:Double; Tdec:Double; SVacc:Double; SVdec:Double):Smallint;stdcall;
function  c154_start_sa_arc_zu(  CardId:Smallint;  Cx:Double;  Cy:Double;  Ex:Double;  Ey:Double;   CW_CCW:Smallint;  StrVel:Double; MaxVel:Double; Tacc:Double; Tdec:Double; SVacc:Double; SVdec:Double):Smallint;stdcall;

function  c154_start_tr_arc2(  var AxisArray:Smallint;  var OffsetCenter:Double;  var OffsetEnd;   CW_CCW:Smallint;  StrVel:Double; MaxVel:Double; Tacc:Double; Tdec:Double):Smallint;stdcall;
function  c154_start_ta_arc2(  var AxisArray:Smallint;  var CenterPos:Double;  var EndPos;   CW_CCW:Smallint;  StrVel:Double; MaxVel:Double; Tacc:Double; Tdec:Double):Smallint;stdcall;
function  c154_start_sr_arc2(  var AxisArray:Smallint;  var OffsetCenter:Double;  var OffsetEnd;   CW_CCW:Smallint;  StrVel:Double; MaxVel:Double; Tacc:Double; Tdec:Double;  SVacc:Double; SVdec:Double):Smallint;stdcall;
function  c154_start_sa_arc2(  var AxisArray:Smallint;  var CenterPos:Double;  var EndPos;   CW_CCW:Smallint;  StrVel:Double; MaxVel:Double; Tacc:Double; Tdec:Double;  SVacc:Double; SVdec:Double):Smallint;stdcall;

//Home Return Mode Section 6.10
function  c154_set_home_config(  AxisNo:Smallint;   home_mode:Smallint;   org_logic:Smallint;   ez_logi:Smallint;   ez_count:Smallint;   erc_out:Smallint):Smallint;stdcall;
function  c154_home_move(  AxisNo:Smallint;  StrVel:Double;  MaxVel:Double;  Tacc:Double):Smallint;stdcall;
function  c154_home_search(  AxisNo:Smallint;  StrVel:Double;  MaxVel:Double;  Tacc:Double;  ORGOffset:Double):Smallint;stdcall;

//Manual Pulser Motion Section 6.11
function  c154_set_pulser_iptmode(  AxisNo:Smallint;   InputMode:Smallint;   Inverse:Smallint):Smallint;stdcall;
function  c154_disable_pulser_input(  AxisNo:Smallint;  Disable:Word ):Smallint;stdcall;
function  c154_pulser_vmove(  AxisNo:Smallint;  SpeedLimit:Double):Smallint;stdcall;
function  c154_pulser_pmove(  AxisNo:Smallint;  Dist:Double;  SpeedLimit:Double):Smallint;stdcall;
function  c154_set_pulser_ratio(  AxisNo:Smallint;   DivF:Smallint;   MultiF:Smallint):Smallint;stdcall;

//Motion Status Section 6.12
function  c154_motion_done(  AxisNo:Smallint):Smallint;stdcall;

//Motion Interface I/O Section 6.13
function  c154_set_servo(  AxisNo:Smallint;   on_off:Smallint):Smallint;stdcall;
function  c154_set_clr_mode(  AxisNo:Smallint;   clr_mode:Smallint;   targetCounterInBit:Smallint):Smallint;stdcall;
function  c154_set_inp(  AxisNo:Smallint;   inp_enable:Smallint;   inp_logic:Smallint):Smallint;stdcall;
function  c154_set_alm(  AxisNo:Smallint;   alm_logic:Smallint;   alm_mode:Smallint):Smallint;stdcall;
function  c154_set_erc(  AxisNo:Smallint;   erc_logic:Smallint;   erc_pulse_width:Smallint;   erc_mode:Smallint):Smallint;stdcall;
function  c154_set_erc_out(  AxisNo:Smallint):Smallint;stdcall;
function  c154_clr_erc(  AxisNo:Smallint):Smallint;stdcall; 
function  c154_set_sd(  AxisNo:Smallint;   sd_logic:Smallint;   sd_latch:Smallint;   sd_mode:Smallint):Smallint;stdcall;
function  c154_enable_sd(  AxisNo:Smallint;   enable:Smallint):Smallint;stdcall;
function  c154_set_limit_logic(  AxisNo:Smallint;   Logic:Smallint ):Smallint;stdcall;
function  c154_set_limit_mode(  AxisNo:Smallint;   limit_mode:Smallint):Smallint;stdcall;
function  c154_get_io_status(  AxisNo:Smallint;  var io_sts:Word ):Smallint;stdcall;

//Interrupt Control Section 6.14
function  c154_int_control(  CardId:Smallint;   intFlag:Smallint):Smallint;stdcall;
function  c154_wait_error_interrupt(  AxisNo:Smallint;  TimeOut_ms :Longint):Smallint;stdcall;
function  c154_wait_motion_interrupt(  AxisNo:Smallint;   IntFactorBitNo:Smallint;  TimeOut_ms:Longint ):Smallint;stdcall;
function  c154_set_motion_int_factor(  AxisNo:Smallint; int_factor:Longword ):Smallint;stdcall;
